# payfit-slack-bot

./: flake.nix  pyproject.toml
payfit_slack/: __init__.py
