[tool.poetry]
name = "payfit_slack"
version = "0.1.0"
description = ""
authors = ["roblabla <unfiltered@roblab.la>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
slack-sdk = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
